# serializer version: 1
# name: test_setup_available[switch.pro_05_control_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.pro_05_control_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Control active',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'active',
    'unique_id': '00000000-0000-0000-0000-000000000001_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_available[switch.pro_05_control_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pro-05 Control active',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pro_05_control_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_not_available[switch.pro_05_control_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.pro_05_control_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Control active',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'active',
    'unique_id': '00000000-0000-0000-0000-000000000001_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_not_available[switch.pro_05_control_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pro-05 Control active',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pro_05_control_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
